# Flask_Python_MovieList_APP

./: .gitattributes  README.md  app.py  package-lock.json  pyproject.toml
api/: __init__.py  database.py  omdb.py
api_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
static/css/: output.css
templates/: base.html  movie_list.html  search.html  stats.html
