[project]
name = "Favourite_movie_app"
version = "0.1.0"
description = "Fullstack App for a movie app"
authors = [
    {name = "Marc", email = "your.email@example.com"}
]
dependencies = [
    "Flask>=3.1.0",
    "requests>=2.32.3",
    "python-dotenv>=1.1.0",
    "mysql-connector-python>=9.3.0",
    "matplotlib>=3.10.1"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"